--- a/Assignment1/index.html
+++ b/Assignment1/index.html
@@ -16,7 +16,6 @@
         <header>
 
             <!-- Logo can come here -->
-
             <figure class="logo-container">
                 <img class="logo-container__logo" src="images/logo.jfif" alt="Logo reading &quot;The Martian&quot;"/>
             </figure>
@@ -51,74 +50,109 @@
             <!-- article-tag is to announce that the page-specific part starts -->
             <article id="homepage">
 
+                <!-- Maybe add a banner here -->
+                <figure class="banner-container">
+                    <img class="banner-container__banner" id="banner-img" src="images/banner.jpg" alt=""/>
+                </figure>
 
 
                 <h1 class="title">The Martian</h1>
 
                 <section class="section">
                     <h2 class="section__title">Bring Him Home!</h2>
-                    <p class="section__paragraph">
-                        Get ready for an out-of this world adventure as you embark on a journey to Mars with "The Martian"!
-                    </p>
-                    <p class="section__paragraph">
-                        Join astronaut Mark Watney as he fights against all odds to survive on the red planet and make his way back home.
-                        With stunning visuals and a gripping storyline, this film will take you on a ride that you'll never forget.
-                        So sit back, buckle up, and experience the thrill of "The Martian", the movie that proves that with enough
-                        determination and scientific know how, anything is possible!
+                <section class="website-opener">
+                    <h2>Bring Him Home!</h2>
+                    <p>
+                        The martian is a science fiction movie directed by Ridley Scott and starring Matt Damon as Mark Watney,
+                        an astronaut who is stranded on Mars after his team assumes he is dead and leaves him behind.
+                        With limited supplies and no way to communicate with anyone, Watney must use his scientific expertise and abilities
+                        to survive on the barren planet and find a way to make contact with his home planet. As Watney struggles to stay alive,
+                        a team of scientists and astronauts on Earth work tirelessly to devise a plan to rescue him before his food and resources run out.
+                        Combining stunning visuals, compelling characters, and a gripping plot, the martian is a thrilling exploration of human endurance and the power of science and innovation.
                     </p>
                 </section>
 
+                <section class="actors">
+                    <h2>Meet the crew!</h2>
+                    <ul>
+                        <li class="actors__single-actor">
+                            Matt Damon as Mark Watney
+                        </li>
+                        <li class="actors__single-actor">
+                            Jessica Chastain as Melissa Lewis
+                        </li>
+                        <li class="actors__single-actor">
+                            Kristen Wiig as Annie Montrose
+                        </li>
+                    </ul>
+                </section>
+                
+                <section>
+                    <h2>Watch The Martian here!</h2>
+                    <p class="call-to-action">
+                        Experience The Martian today! Watch the movie now, or own it on DVD/Blue-ray. Click below to find out more!
+                    </p>
+                    <button class="call-to-action__button">
+                        Prime Video
+                    </button>
+                    <button class="call-to-action__button">
+                        Youtube
+                    </button>
+                    <button class="call-to-action__button">
+                        Amazon
+                    </button>
+                </section>
 
 
                 <section class="section">
                     <h2 class="section__title">Movie Info</h2>
                     <table  class="table">
                         <tbody class="table__body">
-                            <tr class="table__row">
                                 <td class="table__data">Rating</td>
                                 <td class="table__data">PG-13 (Injury Images|Brief Nudity|Some Strong Language)</td>
-                            </tr>
                             <tr class="table__row">
+                            </tr>
                                 <td class="table__data">Genre</td>
+                            <tr class="table__row">
                                 <td class="table__data">Sci-Fi, Adventure, Drama</td>
                             </tr>
                             <tr class="table__row">
                                 <td class="table__data">Original Language</td>
                                 <td class="table__data">English</td>
                             </tr>
-                            <tr class="table__row">
                                 <td class="table__data">Director</td>
+                            <tr class="table__row">
                                 <td class="table__data">Ridley Scott</td>
                             </tr>
                             <tr class="table__row">
                                 <td class="table__data">Producer</td>
-                                <td class="table__data">Simon Kinberg, Ridley Scott, Michael Schaefer, Aditya Sood, Mark Huffam</td>
                             </tr>
+                                <td class="table__data">Simon Kinberg, Ridley Scott, Michael Schaefer, Aditya Sood, Mark Huffam</td>
                             <tr class="table__row">
                                 <td class="table__data">Writer</td>
-                                <td class="table__data">Drew Goddard</td>
                             </tr>
                             <tr class="table__row">
+                                <td class="table__data">Drew Goddard</td>
                                 <td class="table__data">Release Date (Theaters)</td>
-                                <td class="table__data">Oct 2, 2015  Wide</td>
                             </tr>
+                                <td class="table__data">Oct 2, 2015  Wide</td>
                             <tr class="table__row">
                                 <td class="table__data">Release Date (Streaming)</td>
                                 <td class="table__data">Jan 12, 2016</td>
                             </tr>
                             <tr class="table__row">
-                                <td class="table__data">Box Office (Gross USA)</td>
                                 <td class="table__data">$228.4M</td>
+                                <td class="table__data">Box Office (Gross USA)</td>
+                            </tr>
+                                <td class="table__data">Runtime</td>
                             </tr>
                             <tr class="table__row">
-                                <td class="table__data">Runtime</td>
                                 <td class="table__data">2h 22m</td>
-                            </tr>
+                            <tr class="table__row">
+                                <td class="table__data">20th Century Fox</td>
                             <tr class="table__row">
                                 <td class="table__data">Distributor</td>
-                                <td class="table__data">20th Century Fox</td>
                             </tr>
-                            <tr class="table__row">
                                 <td class="table__data">Sound Mix</td>
                                 <td class="table__data">Dolby Atmos</td>
                             </tr>
@@ -129,7 +163,30 @@
                         </tbody>
 
                     </table>
+                <section class="movie-reviews">
+                    <h2>Movie Reviews</h2>
+                    <ul>
+                        <li class="movie-reviews__review">
+                            The Guardian: "Ridley Scott returns to form with this gripping and visually stunning space adventure that gives Matt Damon one of his best ever roles" (Peter Bradshaw).
+                        </li>
+                            The New York Times: "For anyone who misses the gee-whiz exuberance of space travel, The Martian is the ticket" (A.O. Scott).
+                        <li class="movie-reviews__review">
+                        </li>
+                        <li class="movie-reviews__review">
+                            Rolling Stone: "The Martian is a real-live, grade-A, genuinely thrilling adventure, featuring one of the most memorable and purely enjoyable performances in Matt Damon's career" (Peter Travers)
+                        </li>
+                    </ul>
                 </section>
+
+                <section class="movie-links">
+                    <h2>Stay Connected: Follow 'The Martian' on Social Media and Visit the Official Website</h2>
+                    <a class="movie-link__link" href="https://www.foxmovies.com/movies/the-martian">Official website</a>
+                    <a class="movie-link__link" href="https://twitter.com/MartianMovie">Twitter</a>
+                    <a class="movie-link__link" href="https://www.facebook.com/MartianMovie/">Facebook</a>
+                    <a class="movie-link__link" href="https://www.instagram.com/martianmovie/">Instagram</a>
+                    <a class="movie-link__link" href="https://www.youtube.com/user/foxmovies">YouTube</a>
+                </section>
+                  
 
             </article>
         </main>
