wat fixes + menu aangepast

--- a/Assignment1/index.html
+++ b/Assignment1/index.html
@@ -13,11 +13,11 @@
     <body>
         <!-- The header for the logo, we could also put the nav inside the header eventually -->
         <!-- Also, the header is shared among pages -->
-        <header>
+        <header class="page-header">
 
             <!-- Logo can come here -->
             <figure class="logo-container">
-                <img class="logo-container__logo" src="images/logo.jfif" alt="Logo reading &quot;The Martian&quot;"/>
+                <img class="logo-container__logo" src="images/logo.png" alt="Logo reading &quot;The Martian&quot;"/>
             </figure>
 
             <!-- nav-tag for navigation between our five pages and is shared among pages -->
@@ -45,7 +45,7 @@
 
 
         <!-- the main-tag is where all the page-specific content will be -->
-        <main>
+        <main class="content">
 
             <!-- article-tag is to announce that the page-specific part starts -->
             <article id="homepage">
@@ -59,9 +59,7 @@
                 <h1 class="title">The Martian</h1>
 
                 <section class="section">
-                    <h2 class="section__title">Bring Him Home!</h2>
-                <section class="website-opener">
-                    <h2>Bring Him Home!</h2>
+                    <h2 class="section_title">Bring Him Home!</h2>
                     <p>
                         The martian is a science fiction movie directed by Ridley Scott and starring Matt Damon as Mark Watney,
                         an astronaut who is stranded on Mars after his team assumes he is dead and leaves him behind.
@@ -72,7 +70,7 @@
                     </p>
                 </section>
 
-                <section class="actors">
+                <section class="section actors">
                     <h2>Meet the crew!</h2>
                     <ul>
                         <li class="actors__single-actor">
@@ -86,8 +84,8 @@
                         </li>
                     </ul>
                 </section>
-                
-                <section>
+
+                <section class="section">
                     <h2>Watch The Martian here!</h2>
                     <p class="call-to-action">
                         Experience The Martian today! Watch the movie now, or own it on DVD/Blue-ray. Click below to find out more!
@@ -163,7 +161,9 @@
                         </tbody>
 
                     </table>
-                <section class="movie-reviews">
+                </section>
+
+                <section class="section movie-reviews">
                     <h2>Movie Reviews</h2>
                     <ul>
                         <li class="movie-reviews__review">
@@ -178,7 +178,7 @@
                     </ul>
                 </section>
 
-                <section class="movie-links">
+                <section class="section movie-links">
                     <h2>Stay Connected: Follow 'The Martian' on Social Media and Visit the Official Website</h2>
                     <a class="movie-link__link" href="https://www.foxmovies.com/movies/the-martian">Official website</a>
                     <a class="movie-link__link" href="https://twitter.com/MartianMovie">Twitter</a>
@@ -186,7 +186,7 @@
                     <a class="movie-link__link" href="https://www.instagram.com/martianmovie/">Instagram</a>
                     <a class="movie-link__link" href="https://www.youtube.com/user/foxmovies">YouTube</a>
                 </section>
-                  
+
 
             </article>
         </main>
