--- a/Assignment1/index.html
+++ b/Assignment1/index.html
@@ -56,10 +56,10 @@
                 </figure>
 
 
-                <h1 class="title">The Martian</h1>
+                <h1 class="title-homepage">The Martian</h1>
 
                 <section class="section">
-                    <h2 class="section_title">Bring Him Home!</h2>
+                    <h2 class="section__title">Bring Him Home!</h2>
                     <p>
                         The martian is a science fiction movie directed by Ridley Scott and starring Matt Damon as Mark Watney,
                         an astronaut who is stranded on Mars after his team assumes he is dead and leaves him behind.
@@ -71,7 +71,7 @@
                 </section>
 
                 <section class="section actors">
-                    <h2>Meet the crew!</h2>
+                    <h2 class="section__title">Meet the crew!</h2>
                     <ul>
                         <li class="actors__single-actor">
                             Matt Damon as Mark Watney
@@ -86,7 +86,7 @@
                 </section>
 
                 <section class="section">
-                    <h2>Watch The Martian here!</h2>
+                    <h2 class="section__title">Watch The Martian here!</h2>
                     <p class="call-to-action">
                         Experience The Martian today! Watch the movie now, or own it on DVD/Blue-ray. Click below to find out more!
                     </p>
@@ -164,7 +164,7 @@
                 </section>
 
                 <section class="section movie-reviews">
-                    <h2>Movie Reviews</h2>
+                    <h2 class="section__title">Movie Reviews</h2>
                     <ul>
                         <li class="movie-reviews__review">
                             The Guardian: "Ridley Scott returns to form with this gripping and visually stunning space adventure that gives Matt Damon one of his best ever roles" (Peter Bradshaw).
@@ -179,12 +179,13 @@
                 </section>
 
                 <section class="section movie-links">
-                    <h2>Stay Connected: Follow 'The Martian' on Social Media and Visit the Official Website</h2>
-                    <a class="movie-link__link" href="https://www.foxmovies.com/movies/the-martian">Official website</a>
-                    <a class="movie-link__link" href="https://twitter.com/MartianMovie">Twitter</a>
-                    <a class="movie-link__link" href="https://www.facebook.com/MartianMovie/">Facebook</a>
-                    <a class="movie-link__link" href="https://www.instagram.com/martianmovie/">Instagram</a>
-                    <a class="movie-link__link" href="https://www.youtube.com/user/foxmovies">YouTube</a>
+                    <h2 class="section__title">Stay Connected</h2>
+                    <p class="subtitle">Follow 'The Martian' on Social Media and Visit the Official Website:</p>
+                    <a class="movie-links__link" href="https://www.foxmovies.com/movies/the-martian">Official website</a>
+                    <a class="movie-links__link" href="https://twitter.com/MartianMovie">Twitter</a>
+                    <a class="movie-links__link" href="https://www.facebook.com/MartianMovie/">Facebook</a>
+                    <a class="movie-links__link" href="https://www.instagram.com/martianmovie/">Instagram</a>
+                    <a class="movie-links__link" href="https://www.youtube.com/user/foxmovies">YouTube</a>
                 </section>
 
 
