styling styling styling

--- a/Assignment1/index.html
+++ b/Assignment1/index.html
@@ -60,7 +60,7 @@
 
                 <section class="section">
                     <h2 class="section__title">Bring Him Home!</h2>
-                    <p>
+                    <p class="section__paragraph">
                         The martian is a science fiction movie directed by Ridley Scott and starring Matt Damon as Mark Watney,
                         an astronaut who is stranded on Mars after his team assumes he is dead and leaves him behind.
                         With limited supplies and no way to communicate with anyone, Watney must use his scientific expertise and abilities
@@ -87,7 +87,7 @@
 
                 <section class="section">
                     <h2 class="section__title">Watch The Martian here!</h2>
-                    <p class="call-to-action">
+                    <p class="section__paragraph call-to-action">
                         Experience The Martian today! Watch the movie now, or own it on DVD/Blue-ray. Click below to find out more!
                     </p>
                     <button class="call-to-action__button">
