aanpassingen aan style

--- a/Assignment1/index.html
+++ b/Assignment1/index.html
@@ -70,16 +70,16 @@
                     </p>
                 </section>
 
-                <section class="section actors">
+                <section class="section">
                     <h2 class="section__title">Meet the crew!</h2>
-                    <ul>
-                        <li class="actors__single-actor">
+                    <ul class="section__list-display">
+                        <li class="section__display-item">
                             Matt Damon as Mark Watney
                         </li>
-                        <li class="actors__single-actor">
+                        <li class="section__display-item">
                             Jessica Chastain as Melissa Lewis
                         </li>
-                        <li class="actors__single-actor">
+                        <li class="section__display-item">
                             Kristen Wiig as Annie Montrose
                         </li>
                     </ul>
@@ -87,16 +87,16 @@
 
                 <section class="section">
                     <h2 class="section__title">Watch The Martian here!</h2>
-                    <p class="section__paragraph call-to-action">
+                    <p class="section__paragraph"> <!-- modifier hier misschien-->
                         Experience The Martian today! Watch the movie now, or own it on DVD/Blue-ray. Click below to find out more!
                     </p>
-                    <button class="call-to-action__button">
+                    <button class="section__button">
                         Prime Video
                     </button>
-                    <button class="call-to-action__button">
+                    <button class="section__button">
                         Youtube
                     </button>
-                    <button class="call-to-action__button">
+                    <button class="section__button">
                         Amazon
                     </button>
                 </section>
@@ -104,7 +104,7 @@
 
                 <section class="section">
                     <h2 class="section__title">Movie Info</h2>
-                    <table  class="table">
+                    <table class="table">
                         <tbody class="table__body">
                             <tr class="table__row">
                                 <td class="table__data">Rating</td>
@@ -163,7 +163,7 @@
                     </table>
                 </section>
 
-                <section class="section movie-reviews">
+                <section class="section">
                     <h2 class="section__title">Movie Reviews</h2>
                     <ul>
                         <li class="movie-reviews__review">
