--- a/Assignment1/ratings.html
+++ b/Assignment1/ratings.html
@@ -48,8 +48,8 @@
                 <h1 class="title">Ratings</h1>
 
                 <section class="section">
-                    <table id="ratingstable">
-                        <thead>
+                    <table class="table">
+                        <thead class="table__header">
                             <tr>
                                 <th>Platform</th>
                                 <th>Rating</th>
@@ -57,42 +57,42 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
+                            <tr class="table__row">
                                 <td>IMDB</td>
                                 <td>8.0/10</td>
                                 <td>
                                     <a href="https://www.imdb.com/title/tt3659388/">IMDB</a>
                                 </td>
                             </tr>
-                            <tr>
+                            <tr class="table__row">
                                 <td>Rotten Tomatoes</td>
                                 <td>91%</td>
                                 <td>
                                     <a href="https://www.rottentomatoes.com/m/the_martian">Rotten Tomatoes</a>
                                 </td>
                             </tr>
-                            <tr>
+                            <tr class="table__row">
                                 <td>The Guardian</td>
                                 <td>4/5</td>
                                 <td>
                                     <a href="https://www.theguardian.com/film/2015/oct/04/the-martian-review-matt-damon-shines-stranded-astronaut">The Guardian</a>
                                 </td>
                             </tr>
-                            <tr>
+                            <tr class="table__row">
                                 <td>Google</td>
                                 <td>4.6/5</td>
                                 <td>
                                     <a href="https://play.google.com/store/movies/details/The_Martian?id=TeZDLAaDYos&hl=en&gl=US&pli=1">Google Play</a>
                                 </td>
                             </tr>
-                            <tr>
+                            <tr class="table__row">
                                 <td>Metacritic</td>
                                 <td>80</td>
                                 <td>
                                     <a href="https://www.metacritic.com/movie/the-martian">Metacritic</a>
                                 </td>
                             </tr>
-                            <tr>
+                            <tr class="table__row">
                                 <td>Amazon Prime Video</td>
                                 <td>4/5</td>
                                 <td>
